[package]
name = "steel-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
steel-api.workspace = true
abi_stable.workspace = true
libloading.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
# workspace = true
